fix overflow link text

--- a/src/app.css
+++ b/src/app.css
@@ -55,6 +55,7 @@ p.info-text {
 a {
 	color: var(--accent-color);
 	text-decoration: none;
+	word-wrap: break-word;
 }
 
 a:hover {
